@@ -22,6 +22,7 @@ Changes for 1.7.0
 
 Changes for 1.6.3
 
+ - [ZBX-706] fixed element validation in sysmap elements (Artem)
  - [ZBX-705] improved {ESC.HISTORY} macro in recovery notifications (Sasha)
  - [ZBX-647] fixed audit log record for graph update action "added" -> "updated" (alexei)
  - [ZBX-700] fixed possible server crash when using {TRIGGER.NAME} for notifications (Sasha)
